[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
aiogram = "^3.26.0"
python-dotenv = "^1.2.2"
aiohttp-socks = "^0.11.0"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
sqlalchemy = "^2.0.48"
psycopg2 = "^2.9.11"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
pytz = "^2026.1.post1"
singbox2proxy = "^0.2.7"
redis = "^7.4.0"
types-pytz = "^2026.1.1.20260408"
pytest-cov = "^7.1.0"
aiosqlite = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["venv", "versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = 3.14
ignore_missing_imports = true
disallow_untyped_defs = true
strict = true
exclude = [
    '^tests/',
]

[[tool.mypy.overrides]]
module = "src.bot.database.orm_models"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"


[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "aiogram (>=3.27.0,<4.0.0)",
    "types-pytz (>=2026.1.1.20260408,<2027.0.0.0)",
    "fakeredis (>=2.35.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "respx (>=0.23.1,<0.24.0)",
    "pytz (>=2026.2,<2027.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "lxml (>=6.1.0,<7.0.0)"
]
